--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.4"
 services:
-  hello-world:
-    build: hello-world
-    container_name: 'hello-world'
+  spring-boot-rabbitmq:
+    build: spring-boot-rabbitmq
+    container_name: 'spring-boot-rabbitmq'
     environment:
       - spring_profiles_active=docker
     ports:
